--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -61,23 +61,23 @@
           </tr>
           <tr>
             <td><h6><%= t('global.test') %></h6></td>
-            <td><%= @entry.test == 1 ? 'Yes' : 'No' %></td>
+            <td><%= @entry.test == 1 ? t('global.y') : t('global.n') %></td>
           </tr>
           <tr>
             <td><h6><%= t('global.repaired') %></h6></td>
-            <td><%= @entry.repaired == 1 ? 'Yes' : 'No'  %></td>
+            <td><%= @entry.repaired == 1 ? t('global.yes') : t('global.no') %></td>
           </tr>
           <tr>
             <td><h6><%= t('global.ready') %></h6></td>
-            <td><%= @entry.ready == 1 ? 'Yes' : 'No'  %></td>
+            <td><%= @entry.ready == 1 ? t('global.yes') : t('global.no') %></td>
           </tr>
           <tr>
             <td><h6><%= t('global.scrap') %></h6></td>
-            <td><%= @entry.scrap == 1 ? 'Yes' : 'No'  %></td>
+            <td><%= @entry.scrap == 1 ? t('global.yes') : t('global.no') %></td>
           </tr>
           <tr>
             <td><h6><%= t('global.accessoires') %></h6></td>
-            <td><%= @entry.accessoires == 1 ? 'Yes' : 'No'  %></td>
+            <td><%= @entry.accessoires == 1 ? t('global.yes') : t('global.no') %></td>
           </tr>
           <tr>
             <td><h6><%= t('global.note') %></h6></td>
