fixed paths, made broadcast slightly nicer

--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -14,10 +14,10 @@
 
 <% if user_signed_in? and can? :retrieve, Broadcast %>
   <script>
-    $.ajax({url: "/broadcast/retrieve"}).done(function(data) {
+    $.ajax({url: "<%= retrieve_broadcasts_path %>"}).done(function(data) {
       var json = JSON.parse(data)
       $.each(json, function(key,value) {
-        $('#alert-box').append('<div class="alert alert-wrapper"><div class="alert alert-info"><a onclick="$.ajax({url:\'/broadcast/disable?id=' + value.id + '\'})" class="close" data-dismiss="alert">&#215;</a><div id="flash_' + value.title.replace(' ', '_') + '">' + value.text + '</div></div></div>');
+        $('#alert-box').append('<div class="alert alert-wrapper"><div class="alert alert-info"><a onclick="$.ajax({url:\'<%= disable_broadcast_path %>?id=' + value.id + '\'})" class="close" data-dismiss="alert">&#215;</a><div id="flash_' + value.title.replace(' ', '_') + '"><strong>' + value.title + '</strong> ' + value.text + '</div></div></div>');
       });
     });
   </script>
