--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -27,12 +27,29 @@ $brand-info: #75b5aa;
 $brand-warning: #f4bf75;
 $brand-danger: #ac4142;
 
+$input-border-focus: $brand-info;
+
+$state-success-text: $brand-success;
+$state-success-bg: lighten($brand-success, 30%);
+$state-success-border: lighten($brand-success, 20%);
+
+$state-info-text: $brand-info;
+$state-info-bg: lighten($brand-info, 30%);
+$state-info-border: lighten($brand-info, 20%);
+
+$state-warning-text: $brand-warning;
+$state-warning-bg: lighten($brand-warning, 30%);
+$state-warning-border: lighten($brand-warning, 20%);
+
+$state-danger-text: $brand-danger;
+$state-danger-bg: lighten($brand-danger, 30%);
+$state-danger-border: lighten($brand-danger, 20%);
+
 @import "bootstrap";
 
 body {
   padding-top: 60px;
 }
-
 
 /* give icons some extra margin to the right */
 .glyphicon {
