--- a/app/views/broadcasts/index.html.erb
+++ b/app/views/broadcasts/index.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'Badger - New broadcast') %>
+<% provide(:title, 'Badger - Broadcast Panel') %>
 <legend>New broadcast</legend>
 
 <% if @broadcasts.length == 0 %>
