--- a/app/views/invoices/new.html.erb
+++ b/app/views/invoices/new.html.erb
@@ -10,7 +10,7 @@
   <%= f.hidden_field :company, :value => session[:company] %>
 
   <%= f.form_group do %>
-    <%= f.submit t('invoice.new.button'), data: { disable_with: t('invoice.new.button_send') }, class: "btn btn-primary" %>
+    <%= f.submit t('invoice.new.button'), data: { disable_with: t('invoice.new.button_send') }, class: "btn btn-primary", 'onclick' => '$(\'.loading-spinner\').css(\'display\', \'inline-block\');' %>
   <% end %>
 <% end %>
 
