--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,8 @@
       <%= render 'layouts/header' %>
     <% end %>
 
+    <div class="loading-spinner"></div>
+
     <div id="main" role="main">
       <div class="container">
         <div class="content">
